Related to #493: Fix smaller issues
* subtitle overlaps with title
* book titles: add missing icons
* article titles: report bug link leads to empty title "" in Bugzilla

--- a/source-assets/styles2022/sass/custom/content-title.sass
+++ b/source-assets/styles2022/sass/custom/content-title.sass
@@ -31,7 +31,8 @@ h1:has(.title-container)
     font-size: 28px
     font-weight: normal
     line-height: 120%
-    margin: -40px 0 50px
+    margin-top: 1.25rem
+    margin-bottom: 2.5rem
     width: 100%
 
 
@@ -182,16 +183,6 @@ h2
 .icon-reportbug
   margin-right: 1rem 
 
-  // @include m_mobile
-  // margin-right: 0.1rem
-
-// .icon-reportbug img,
-// .icon-editsource img
-//   border: 2pt solid $c_white
-//   // &:hover,
-//   // &:focus
-//   //   border: 2pt solid $c_jungle
-//   //   overflow: hidden
 
 .icon-editsource,
 .icon-reportbug
