Create SBP stylesheets structure for FO/XHTML
* Changes for both formats:
  * Base SBP stylesheets on suse2022-ns
  * Supports affiliation/jobtitle and affiliation/orgname in author,
    editor, and othercredit. Distinguish between a personname and an
    orgname
  * Detects meta[@name='series'], meta[@name='category'], and meta[@name='platform']

* FO output
  * Change article titlepage for FO
    - upper right shows series and category
    - title, subtitle, and SVG separator
    - Platforms and authors (first authors, then editors and
      othercredits)
    - Shows max 5 company logos from right to left
  * Shows title and subtitle on page 2
  * Adds pagebreak after title

* HTML output
  * Change article titlepage for XHTML
    - Shows title & subtitle followed by d:meta[@name='series'] and
      d:meta[@name='category']
    - After the title block, it shows authors and contributors
    - After the author, it shows optional company logos
    - After the logos, it shows the platforms
    - Change order of authors and abstract
    - List job title and company name for every author

This is how <info> should look like:

<info>
   <title>YOUR TITLE</title>
   <subtitle>YOUR SUBTITLE</subtitle>
   <productname>YOUR PRODUCTNAME (if possible)</productname>
   <!-- <productnumber/> --><!-- optional product number -->
   <dm:docmanager xmlns:dm="urn:x-suse:ns:docmanager">
     ...
   </dm:docmanager>

   <authorgroup>
     <!-- add as many authors as you want -->
     <author>
       <personname>
         <firstname>Tux</firstname>
         <surname>Penguin</surname>
       </personname>
       <affiliation>
         <jobtitle>THE JOBTITLE</jobtitle>
         <orgname>SUSE</orgname>
       </affiliation>
     </author>
     <!--
       Possible to add <editor> and <othercredit> as well
       See
       * https://tdg.docbook.org/tdg/5.2/editor.html
       * https://tdg.docbook.org/tdg/5.2/othercredit.html
      -->
   </authorgroup>

   <meta name="platform">First platf

--- a/source-assets/styles2022/sass/custom/content-title.sass
+++ b/source-assets/styles2022/sass/custom/content-title.sass
@@ -202,3 +202,32 @@ h2
 
   &:hover
     background: url($title_icons_path + 'report-bug-dark.svg') no-repeat
+
+
+.titlepage
+  .authorgroup:nth-child(1)
+    margin-top: 3rem
+  
+  // .authorgroup:nth-child(2)
+  //  margin-top: 2rem
+  
+  .series-category
+    text-align: right
+    font-size: 1.25rem
+    margin-top: 3rem
+    margin-bottom: 3rem
+
+
+.cover
+  margin-top: 2rem
+  display: flex
+  gap: 1.25rem
+  justify-content: flex-start
+
+  .mediaobject
+    // border: 1pt solid #eee
+    padding: 3pt
+    width:   5rem
+
+.platforms
+  margin-top: 2rem
