Fix #513: Correct SBP stylesheets
* Fix broken PDF generation in `fo:block-container`
* Add date and localized date key to FO/XHTML
* Fix author alignment in XHTML
* SBP(FO,XHTML): Group author elements
  * Group author, editor, and othercredit into an authorgroup
    and apply the authorgroup template (use exsl:node-set() function)
  * Make article.titlepage.recto the last template

Co-authored-by: Meike Chabowski <chabowski@@users.noreply.github.com>

--- a/source-assets/styles2022/sass/custom/content-title.sass
+++ b/source-assets/styles2022/sass/custom/content-title.sass
@@ -207,6 +207,7 @@ h2
 .titlepage
   .authorgroup:nth-child(1)
     margin-top: 3rem
+    text-align: left
   
   // .authorgroup:nth-child(2)
   //  margin-top: 2rem
