--- a/source-assets/styles2022/sass/style-new.sass
+++ b/source-assets/styles2022/sass/style-new.sass
@@ -141,7 +141,7 @@ $i_page_width_wide: $i_superwide
 
 // Custom imports
 
-@import "custom/major-elements.sass"
+@import "custom/major-elements-new.sass"
 
 // @import "custom/header-menu.sass"
 
