correction in side-toc.sass for 'a' element

--- a/source-assets/styles2022/sass/custom/side-toc.sass
+++ b/source-assets/styles2022/sass/custom/side-toc.sass
@@ -62,8 +62,7 @@ $you_are_here_weight: 600
   
   a
     color: $c_jungle
-    padding-inline:0
-    padding-block:0.4rem
+    padding: 0.4rem 0
 
     &:focus,
     &:hover,
