Process <revhistory> in book & article title pages
* Integrate it in title page
* Introduce additional parameters:
  * $generate.revhistory=1|0
    Enable/disable revhistory processing
  * $revision.limit=''|INT
    Limit the revision list to INT entries.
    If empty, display all
  * $revision.add.div.title=1|0
    If there is no revhistory/title, should the article/book
    title be included after the default "Revision History"?
* Sort the revision entries by date
* Add CSS style
* Change link to revhistory page:
  * Add ARIA attributes for revhistory link on title page
  * Open a new tab when clicked
* Include revhistory template in titlepage.mode
* Open link in
* Add revision key to l10n context=title

--- a/suse2022-ns/static/css/style-new.css
+++ b/suse2022-ns/static/css/style-new.css
@@ -1983,6 +1983,14 @@ h6 {
 h1:has(.title-container) {
   padding: 80px 0 80px; }
 
+.revhistory {
+  margin-left: 2em;
+  margin-right: 2em; }
+
+.titlepage-revhistory {
+  margin-top: 1em;
+  margin-bottom: 1em; }
+
 .article .title,
 .book .title,
 .set .title {
