--- a/source-assets/styles2022/sass/custom/content-title.sass
+++ b/source-assets/styles2022/sass/custom/content-title.sass
@@ -10,6 +10,15 @@ h6
 h1:has(.title-container)
   padding: 80px 0 80px
 
+.revhistory
+  margin-left: 2em
+  margin-right: 2em
+
+.titlepage-revhistory
+  margin-top: 1em
+  margin-bottom: 1em
+
+
 // FIXME: almost everything below needs a thorough cleanup!
 
 .article,
