DOCTEAM-1368: Improve handling of SBP series
In the regular stylesheets:
* Introduce a new parameter json-ld-seriesname (default empty)
* Introduce add.series.name and implement the following algorithm
  for meta[@name='series']:
  * Check for non-empty $json-ld-seriesname parameter. If yes,
    use it. If not, continue
  * Check if d:info/d:meta[@name='series'] exist. If yes, use.
    If not abort.
* Adapt SASS/CSS stylesheets

For the SBP stylesheets

* Set parameter json-ld-seriesname to "SUSE Best Practices"
* Change FO/HTML stylesheet to produce a single line for each category
* Fix series and categories for SBP in cover page
  The cover page places series name and categories in the
  following way:

  Series Name ("SUSE Best Practices")
  - space -
  Category 1
  Category 2

--- a/source-assets/styles2022/sass/custom/content-title.sass
+++ b/source-assets/styles2022/sass/custom/content-title.sass
@@ -227,6 +227,14 @@ h2
     margin-top: 3rem
     margin-bottom: 3rem
 
+    .category
+      margin-top: 1.75rem
+
+      .phrase
+         display: block
+         text-align: right
+         line-height: 1rem
+
 
 .cover
   margin-top: 2rem
