--- a/source-assets/styles2022/sass/custom/content-inline.sass
+++ b/source-assets/styles2022/sass/custom/content-inline.sass
@@ -145,7 +145,7 @@ article
     color: $c_dark_jungle
     text-decoration: underline
 
-  procedure-contents p a 
+  .procedure-contents p a 
     color: $c_lighter_pine
     text-decoration: underline
 
