Add missing two SASS variables
$c_lighter_pine and $c_dark_jungle

--- a/source-assets/styles2022/sass/style.sass
+++ b/source-assets/styles2022/sass/style.sass
@@ -27,6 +27,8 @@ $c_fog_300:      rgb(192, 194, 196)
 
 $c_pine:         rgb( 12,  50,  44)
 $c_jungle:       rgb( 48, 186, 120)
+$c_lighter_pine: rgb( 2, 89, 55)
+$c_dark_jungle:  rgb( 0, 134, 87)
 
 $c_midnight:     rgb( 25,  32, 114)
 $c_midnight_60:  rgb(117, 122, 167)
