--- a/suse2022-ns/static/css/style-new.css
+++ b/suse2022-ns/static/css/style-new.css
@@ -1456,7 +1456,7 @@ footer {
     text-decoration: underline; }
 
 .crumbs span {
-  color: #30ba78; }
+  color: #025937; }
 
 .side-toc > *:last-child::after {
   content: '';
@@ -1496,10 +1496,10 @@ footer {
     font-style: normal; }
 
 #_side-toc-page a {
-  color: #30ba78;
-  padding: 0.4rem 0; }
+  color: #008657;
+  padding: 0.4rem 0;
+  font-weight: 500; }
   #_side-toc-page a:focus, #_side-toc-page a:hover, #_side-toc-page a:active {
-    background-color: transparent;
     text-decoration: underline; }
 
 @media screen and (max-width: 1024px) {
@@ -2449,13 +2449,21 @@ p {
   color: #333; }
 
 article a {
-  color: #26915e;
+  color: #008657;
   text-decoration: none; }
   article a:active, article a:focus, article a:hover, article a:visited:active, article a:visited:focus, article a:visited:hover {
-    color: #26915e;
+    color: #008657;
     text-decoration: underline; }
   article a:visited {
-    color: #26915e; }
+    color: #008657; }
+
+article p a {
+  color: #008657;
+  text-decoration: underline; }
+
+article .procedure-contents p a {
+  color: #025937;
+  text-decoration: underline; }
 
 .free-id {
   height: 0.01px;
