Updated the colour of links in the right nav
Updated side-toc.sass

--- a/source-assets/styles2022/sass/custom/side-toc.sass
+++ b/source-assets/styles2022/sass/custom/side-toc.sass
@@ -61,7 +61,7 @@ $you_are_here_weight: 600
 #_side-toc-page
   
   a
-    color: $c_dark_jungle
+    color: $c_lighter_pine
     padding: 0.4rem 0
     font-weight: 500
 
