Revert "Replace Poppins with SUSE fonts"
This reverts commit 60e0579afe4cd5054c6d8b6e8d7c8fef398af2fb.

--- a/source-assets/styles2022/sass/style-new.sass
+++ b/source-assets/styles2022/sass/style-new.sass
@@ -7,7 +7,7 @@ $title_icons_path: '../images/'
 
 // Fonts
 
-$f_sans: SUSE, Roboto, sans-serif
+$f_sans: Poppins, Roboto, sans-serif
 $f_mono: 'Roboto Mono', 'RobotoMono', 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace
 
 $i_font_normal: 1rem
