--- a/suse2022-ns/static/css/style-new.css
+++ b/suse2022-ns/static/css/style-new.css
@@ -1290,7 +1290,7 @@ body {
 
 body {
   background-color: white;
-  font-family: SUSE, Roboto, sans-serif;
+  font-family: Poppins, Roboto, sans-serif;
   line-height: 140%; }
   body main,
   body .growth-inhibitor {
@@ -1496,7 +1496,7 @@ footer {
     font-style: normal; }
 
 #_side-toc-page a {
-  color: #025937;
+  color: #008657;
   padding: 0.4rem 0;
   font-weight: 500; }
   #_side-toc-page a:focus, #_side-toc-page a:hover, #_side-toc-page a:active {
@@ -1873,7 +1873,7 @@ body.scroll-up main.sticky #_open-side-toc-overall {
   display: table-cell;
   height: 60px;
   vertical-align: middle;
-  font-family: SUSE, Roboto, sans-serif;
+  font-family: Poppins, Roboto, sans-serif;
   padding: 0 2rem;
   color: #0c322c;
   background-color: #30ba78;
@@ -2496,7 +2496,7 @@ article .procedure-contents p a {
   border-radius: 50%;
   color: white;
   display: inline-block;
-  font-family: SUSE, Roboto, sans-serif;
+  font-family: Poppins, Roboto, sans-serif;
   font-size: .7rem;
   font-weight: 600;
   line-height: 1rem;
@@ -3028,7 +3028,7 @@ article a:hover code {
   box-sizing: border-box;
   color: #0c322c;
   display: inline-block;
-  font-family: SUSE, Roboto, sans-serif;
+  font-family: Poppins, Roboto, sans-serif;
   font-size: 12px;
   height: 26px;
   line-height: 26px;
