--- a/suse2022-ns/static/css/style-new.css
+++ b/suse2022-ns/static/css/style-new.css
@@ -1496,7 +1496,7 @@ footer {
     font-style: normal; }
 
 #_side-toc-page a {
-  color: #008657;
+  color: #025937;
   padding: 0.4rem 0;
   font-weight: 500; }
   #_side-toc-page a:focus, #_side-toc-page a:hover, #_side-toc-page a:active {
@@ -3059,61 +3059,62 @@ article a:hover code {
     display: block;
     overflow-x: auto;
     padding: 0.5em;
-    color: #c7f1e3; }
-  .hljs-comment,
-  .hljs-quote {
-    color: #bfcbfb;
+    font-weight: 400; }
+  .hljs-comment, .hljs-quote {
+    color: #eafaf4;
     font-style: italic; }
-  .hljs-keyword,
-  .hljs-selector-tag,
-  .hljs-subst {
-    color: #c7f1e3;
-    font-weight: bold; }
-  .hljs-number,
+  .hljs-keyword, .hljs-selector-tag, .hljs-subst {
+    color: #90ebcd; }
   .hljs-literal,
-  .hljs-variable,
-  .hljs-template-variable,
-  .hljs-tag .hljs-attr {
-    color: #4cd191; }
-  .hljs-string,
-  .hljs-doctag {
-    color: #f3b292; }
-  .hljs-title,
-  .hljs-section,
-  .hljs-selector-id {
-    color: #fe7c3f;
-    font-weight: bold; }
-  .hljs-subst {
-    font-weight: normal; }
-  .hljs-type,
-  .hljs-class .hljs-title {
-    color: #bbbdd4;
-    font-weight: bold; }
+  .hljs-number,
   .hljs-tag,
+  .hljs-template-variable,
+  .hljs-variable {
+    color: #eafaf4; }
+  .hljs-tag .hljs-attr,
+  .hljs-tag .hljs-name {
+    color: #90ebcd; }
+  .hljs-attr {
+    color: #90ebcd; }
+  .hljs-doctag,
+  .hljs-string {
+    color: #eafaf4; }
+  .hljs-section,
+  .hljs-selector-id,
+  .hljs-title {
+    color: #ffd3bd; }
+  .hljs-subst {
+    font-weight: 400; }
+  .hljs-class .hljs-title,
+  .hljs-type {
+    color: #eafaf4; }
+  .hljs-attribute,
   .hljs-name,
-  .hljs-attribute {
-    color: #dedfe0;
-    font-weight: normal; }
-  .hljs-regexp,
-  .hljs-link {
-    color: #30ba78; }
-  .hljs-symbol,
-  .hljs-bullet {
-    color: #fe7c3f; }
+  .hljs-tag {
+    color: #eafaf4; }
+  .hljs-tag {
+    color: #90ebcd; }
+  .hljs-link,
+  .hljs-regexp {
+    color: #eafaf4; }
+  .hljs-bullet,
+  .hljs-symbol {
+    color: #ffd3bd; }
   .hljs-built_in,
   .hljs-builtin-name {
-    color: #bfcbfb; }
+    color: #eafaf4; }
   .hljs-meta {
-    color: #e3f8f1;
-    font-weight: bold; }
+    color: #ccc; }
   .hljs-deletion {
-    background: #f9dac8; }
+    background: #fdd;
+    color: #0c322c; }
   .hljs-addition {
-    background: #e3f8f1; }
+    background: #dfd;
+    color: #0c322c; }
   .hljs-emphasis {
     font-style: italic; }
   .hljs-strong {
-    font-weight: bold; } }
+    font-weight: 600; } }
 
 .doc-status,
 .remark {
