--- a/source-assets/styles2022/sass/style-new.sass
+++ b/source-assets/styles2022/sass/style-new.sass
@@ -7,7 +7,7 @@ $title_icons_path: '../images/'
 
 // Fonts
 
-$f_sans: Poppins, Roboto, sans-serif
+$f_sans: SUSE, Suse, Roboto, sans-serif
 $f_mono: 'Roboto Mono', 'RobotoMono', 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace
 
 $i_font_normal: 1rem
