Raise color contrast in screen
As text color, use white instead of $c_mint_60

--- a/source-assets/styles2022/sass/custom/content-mono-verbatim.sass
+++ b/source-assets/styles2022/sass/custom/content-mono-verbatim.sass
@@ -147,7 +147,7 @@ article
     background-color: unset
     box-sizing: border-box
     //color: $c_pine
-    color: $c_mint_60
+    color: $c_white
     display: block
     font: normal 13px $f_mono
     line-height: 125%
