Raise contrast for platform markers
Use $c_mint as background and $c_pine as text (ratio 9.91:1)

--- a/source-assets/styles2022/sass/custom/content-inline.sass
+++ b/source-assets/styles2022/sass/custom/content-inline.sass
@@ -48,9 +48,9 @@ strong
 
 .arch-arrow-start,
 .arch-arrow-end
-  background-color: $c_jungle
+  background-color: $c_mint
   border-radius: 3px
-  color: $c_white
+  color: $c_pine
   display: inline-block
   font-size: 14px
   height: 20px
