Improve contrast on side toc
Use c_lighter_pine instead of c_jungle

--- a/source-assets/styles2022/sass/custom/side-toc.sass
+++ b/source-assets/styles2022/sass/custom/side-toc.sass
@@ -152,7 +152,7 @@ $you_are_here_weight: 600
       transform: rotate(0.01deg)
 
   ol > li.active > a
-    background-color: $c_jungle
+    background-color: $c_lighter_pine
     color: $c_white
 
     ol li > a
