--- a/suse2022-ns/static/css/style.css
+++ b/suse2022-ns/static/css/style.css
@@ -1824,7 +1824,7 @@ body.disable-language-switcher #_utilitynav #_utilitynav-language {
   transform: rotate(0.01deg); }
 
 #_side-toc-overall ol > li.active > a {
-  background-color: #30ba78;
+  background-color: #025937;
   color: white; }
   #_side-toc-overall ol > li.active > a ol li > a {
     padding-left: 1rem; }
