--- a/suse2022-ns/static/css/style-new.css
+++ b/suse2022-ns/static/css/style-new.css
@@ -1570,7 +1570,7 @@ footer {
   transform: rotate(0.01deg); }
 
 #_side-toc-overall ol > li.active > a {
-  background-color: #30ba78;
+  background-color: #025937;
   color: white; }
   #_side-toc-overall ol > li.active > a ol li > a {
     padding-left: 1rem; }
