Adjust color contrast on procedure backgrounds
Siteimprove reports for a link inside a procedure background a
color contrast ratio of 4.2 : 1, but 4.5 : 1 is the minimum.

Make the procedure background a little bit lighter.

--- a/source-assets/styles2022/sass/custom/content-formal-informal.sass
+++ b/source-assets/styles2022/sass/custom/content-formal-informal.sass
@@ -1,6 +1,6 @@
 .complex-example .example-contents,
 .procedure-contents
-  background-color: lighten($c_fog, 2%)
+  background-color: $c_fog_background
   border-left: .2rem solid $c_fog_200
 
 .complex-example .example-contents
