--- a/suse2022-ns/static/css/style-new.css
+++ b/suse2022-ns/static/css/style-new.css
@@ -2473,7 +2473,7 @@ article .procedure-contents p a {
 
 .complex-example .example-contents,
 .procedure-contents {
-  background-color: #f4f4f4;
+  background-color: #fcfcfc;
   border-left: 0.2rem solid #dedfe0; }
 
 .complex-example .example-contents {
