--- a/source-assets/styles2022/sass/style.sass
+++ b/source-assets/styles2022/sass/style.sass
@@ -16,54 +16,7 @@ $i_font_menu: .8rem
 $i_font_menu_mini: .7rem
 
 
-// Colors
-
-$c_white:        rgb(255, 255, 255)
-$c_black:        rgb(  0,   0,   0)
-
-$c_fog:          rgb(239, 239, 239)
-$c_fog_200:      rgb(222, 223, 224)
-$c_fog_300:      rgb(192, 194, 196)
-
-$c_pine:         rgb( 12,  50,  44)
-$c_jungle:       rgb( 48, 186, 120)
-$c_lighter_pine: rgb( 2, 89, 55)
-$c_dark_jungle:  rgb( 0, 134, 87)
-
-$c_midnight:     rgb( 25,  32, 114)
-$c_midnight_60:  rgb(117, 122, 167)
-$c_midnight_30:  rgb(187, 189, 212)
-
-$c_waterhole:    rgb( 36,  83, 255)
-$c_waterhole_60: rgb(128, 154, 247)
-$c_waterhole_30: rgb(191, 203, 251)
-
-$c_persimmon:    rgb(254, 124,  63)
-$c_persimmon_60: rgb(243, 178, 146)
-$c_persimmon_30: rgb(249, 218, 200)
-
-$c_mint:         rgb(144, 235, 205)
-$c_mint_60:      rgb(199, 241, 227)
-$c_mint_30:      rgb(227, 248, 241)
-
-
-// special color variations
-$c_funky_persimmon_prelight: lighten($c_persimmon, 10%)
-$c_funky_jungle_prelight: lighten($c_jungle, 10%)
-$c_funky_pine_prelight: lighten($c_pine, 10%)
-
-$c_funky_darker_jungle: darken($c_jungle, 10%)
-
-// URL-encoded colors for background-image SVGs
-
-// FIXME: is there some way to do this via a mixin or so? redefining all
-//   those colors in hex leads to dumb duplication
-$s_uhash:                     '%23'
-$c_white_url:                 #{$s_uhash}fff
-$c_pine_url:                  #{$s_uhash}0c322c
-$c_jungle_url:                #{$s_uhash}30ba78
-$c_fog_300_url:               #{$s_uhash}c0c2c4
-$c_funky_darker_jungle_url:   #{$s_uhash}26915e
+@import "colors.sass"
 
 
 // header heights
