--- a/source-assets/styles2022/sass/custom/content-mono-verbatim.sass
+++ b/source-assets/styles2022/sass/custom/content-mono-verbatim.sass
@@ -216,4 +216,4 @@ article
   &.copy-success
     > div,
     > pre
-      background-color: $c_funky_pine_prelight
+      background-color: $c_darker_waterhole
