--- a/suse2022-ns/static/css/style-new.css
+++ b/suse2022-ns/static/css/style-new.css
@@ -3050,7 +3050,7 @@ article a:hover code {
 
 .verbatim-wrap.copy-success > div,
 .verbatim-wrap.copy-success > pre {
-  background-color: #165b50; }
+  background-color: #0b41b8; }
 
 @media screen {
   .hljs {
