Add doc survey link on the right
* Survey link is placed on the right side of the
  navigation pane.
* Adapt SASS
* Compile style.css from SASS source

--- a/source-assets/styles2022/sass/custom/major-elements.sass
+++ b/source-assets/styles2022/sass/custom/major-elements.sass
@@ -120,6 +120,18 @@ main
       padding-left: 4rem !important
       padding-right: 4rem !important
 
+
+  .survey-link
+    background-color: $c_mint
+    padding: 16px
+    position: fixed
+    bottom: 16px
+    right: 16px
+    color: black
+    font-weight: 500
+    z-index: 3
+    text-decoration: none
+    
   .side-toc
     @extend .column
     @extend .is-2
