--- a/suse2022-ns/static/css/style.css
+++ b/suse2022-ns/static/css/style.css
@@ -1371,6 +1371,16 @@ main {
       main article {
         padding-left: 4rem !important;
         padding-right: 4rem !important; } }
+  main .survey-link {
+    background-color: #90ebcd;
+    padding: 16px;
+    position: fixed;
+    bottom: 16px;
+    right: 16px;
+    color: black;
+    font-weight: 500;
+    z-index: 3;
+    text-decoration: none; }
   main .side-toc {
     overflow-y: auto;
     position: relative;
