Improve CSS for literal inside xref
Thanks to Lukáš!

--- a/source-assets/styles2022/sass/custom/content-inline.sass
+++ b/source-assets/styles2022/sass/custom/content-inline.sass
@@ -124,6 +124,13 @@ p
 .othercredit
   color: #333
 
+a
+  code.literal
+    text-decoration: underline
+    text-decoration-thickness: inherit
+    border-bottom: none
+
+
 article
   a
     color: $c_dark_jungle
