--- a/suse2022-ns/static/css/style.css
+++ b/suse2022-ns/static/css/style.css
@@ -1792,6 +1792,9 @@ body.disable-language-switcher #_utilitynav #_utilitynav-language {
   #_side-toc-page .feedback {
     display: none !important; } }
 
+#_side-toc-page.side-toc .toc ul li ul {
+  margin-left: 2em; }
+
 #_side-toc-overall ol ol {
   background-color: #dedfe0;
   margin-bottom: 0;
