Header 1.7 update and shared-header height CSS
* Raise header from 1.5 -> 1.7
* Add two shared-header rules (regular and for media)

--- a/source-assets/styles2022/sass/custom/header-menu.sass
+++ b/source-assets/styles2022/sass/custom/header-menu.sass
@@ -290,3 +290,11 @@ body
     #_utilitynav
       #_utilitynav-language
         display: none
+
+
+shared-header
+    height: 122px
+
+    // TODO: Add variables? Add different media rules?
+    @media (max-width: $i_mobile)
+      height: 76px
