Part 2: Add to major-elements-new.sass

--- a/source-assets/styles2022/sass/custom/major-elements-new.sass
+++ b/source-assets/styles2022/sass/custom/major-elements-new.sass
@@ -102,7 +102,7 @@ main
 
   article,
   .side-toc
-    min-height: calc(100vh - #{$i_big_head})
+    min-height: calc(100vh)
 
   article
     @extend .column
@@ -147,7 +147,7 @@ main
   &.sticky
     article
       position: relative
-      top: $i_big_head
+      // top: $i_big_head
       margin-bottom: $i_big_head
 
     .side-toc
