--- a/suse2022-ns/static/css/style-new.css
+++ b/suse2022-ns/static/css/style-new.css
@@ -1341,7 +1341,7 @@ main {
   display: flex; }
   main article,
   main .side-toc {
-    min-height: calc(100vh - 135px); }
+    min-height: calc(100vh); }
   main article {
     position: relative;
     padding-bottom: 7rem; }
@@ -1367,7 +1367,6 @@ main {
     padding-left: 1.5rem; }
   main.sticky article {
     position: relative;
-    top: 135px;
     margin-bottom: 135px; }
   main.sticky .side-toc {
     height: calc(100vh - 65px);
