Fix #784: Improve nested numbered list
For nested numbered lists, don't overwrite the HTML type attribute
in this structure:

  <ol class="orderedlist" type="a"> ... </ol>

--- a/suse2022-ns/static/css/style.css
+++ b/suse2022-ns/static/css/style.css
@@ -3037,7 +3037,7 @@ ol.orderedlist, ol.substeps {
   margin: 0 0 0 10px;
   padding: 0 0 0 35px; }
 
-ol.orderedlist, ol.procedure {
+ol.procedure {
   list-style-type: decimal; }
 
 ol.substeps {
