--- a/source-assets/styles2022/sass/custom/major-elements-new.sass
+++ b/source-assets/styles2022/sass/custom/major-elements-new.sass
@@ -128,6 +128,9 @@ main
     position: relative
     scrollbar-width: thin
     scrollbar-color: $c_pine $c_fog_200
+    position: sticky
+    top: calc(122px + 2.5rem)
+    align-self: start
 
 
   #_side-toc-overall:not(.placebo)
