Making breadcrumb-bar sticky

--- a/source-assets/styles2022/sass/custom/major-elements-new.sass
+++ b/source-assets/styles2022/sass/custom/major-elements-new.sass
@@ -95,7 +95,14 @@ body
   padding: .5rem 1.25rem
   background-color: $c_fog_200
   border-bottom: 1px solid $c_fog_300
+  position: fixed
+  top: 76px
+  z-index: 5
+  width: 100%
 
+  @media (min-width: 992px)
+    top: 122px
+    
 
 main
   display: flex
