--- a/source-assets/styles2022/sass/custom/major-elements-new.sass
+++ b/source-assets/styles2022/sass/custom/major-elements-new.sass
@@ -150,6 +150,7 @@ main
     background-color: $c_fog
     margin-right: 0
     padding-left: 1.5rem   
+    right: 16px
 
     // background-color: $c_white
     // margin-right: 0
